# Prozis-Smart-Packaging

./: CMakeLists.txt  README.md  modem.conf  pawr.conf  prj.conf
modules/.west/: config
src/: gateway.h  main.c
src/gateway_BLE/: bleAdvConnCentral.c  bleAdvConnCentral.h  blePAwRCentral.c  blePAwRCentral.h  blePAwRMsgFormats.h  ble_main.c
src/gateway_GNSS/: u_main.c
src/gateway_MODEM/: gateway_modem.c  gateway_modem.h
src/gateway_STORAGE/: gateway_storage.c  gateway_storage.h  lfs.h  lfs_nand_wrapper.c  lfs_nand_wrapper.h  lfs_util.h  nand_flash.c  nand_flash.h
